<resources>
    <string name="app_name">Hotels</string>
    <string name="action_settings">Settings</string>
    <string name="title_hotel_list">Hotels</string>
    <string name="title_hotel_detail">Hotel Detail</string>
    var hotelData: HotelData = HotelData(1, 2, "there",  R.drawable.untitled, "Hotel SUPER", 200, 20, "Nice hotel", 5.0F, 4)

    <string name="sorting_text">sort by</string>
    <string name="sorting_text_stars">stars</string>
    <string name="sorting_text_rating">rating</string>
    <string name="sorting_text_price">price</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="capacity">Capacity</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="stars">Stars</string>
    <string name="insertHotel">Insert new hotel</string>
    <string name="save">Save</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="addRating">Add rating</string>
    <string-array name="dummy_list">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>

    <string-array name="nameList">
        <item>Michael</item>
        <item>Lukas</item>
        <item>Daniel</item>
        <item>Alexander</item>
        <item>Thomas</item>
        <item>Florian</item>
        <item>Stefan</item>
        <item>David</item>
        <item>Andreas</item>
        <item>Christoph</item>
        <item>Markus</item>
        <item>Manuel</item>
        <item>Patrick</item>
        <item>Dominik</item>
        <item>Martin</item>
        <item>Sebastian</item>
        <item>Maximilian</item>
        <item>Philipp</item>
        <item>Christian</item>
        <item>Tobias</item>
        <item>Simon</item>
        <item>Fabian</item>
        <item>Matthias</item>
        <item>Julian</item>
        <item>Jakob</item>
        <item>Paul</item>
        <item>Johannes</item>
        <item>Felix</item>
        <item>Elias</item>
        <item>Benjamin</item>
        <item>Marcel</item>
        <item>Jonas</item>
        <item>Mario</item>
        <item>Raphael</item>
        <item>Bernhard</item>
        <item>Kevin</item>
        <item>Leon</item>
        <item>Moritz</item>
        <item>Peter</item>
        <item>Marco</item>
        <item>Rene</item>
        <item>Nico</item>
        <item>Luca</item>
        <item>Samuel</item>
        <item>Niklas</item>
        <item>Georg</item>
        <item>Mathias</item>
        <item>Christopher</item>
        <item>Oliver</item>
        <item>Noah</item>
        <item>Clemens</item>
        <item>Jan</item>
        <item>Gabriel</item>
        <item>Lorenz</item>
        <item>Josef</item>
        <item>Robert</item>
        <item>Valentin</item>
        <item>Philip</item>
        <item>Wolfgang</item>
        <item>Jürgen</item>
        <item>Julia</item>
        <item>Anna</item>
        <item>Katharina</item>
        <item>Lisa</item>
        <item>Sarah</item>
        <item>Laura</item>
        <item>Melanie</item>
        <item>Lena</item>
        <item>Stefanie</item>
        <item>Sandra</item>
        <item>Sophie</item>
        <item>Sabrina</item>
        <item>Christina</item>
        <item>Magdalena</item>
        <item>Johanna</item>
        <item>Nina</item>
        <item>Nicole</item>
        <item>Elisabeth</item>
        <item>Leonie</item>
        <item>Daniela</item>
        <item>Jasmin</item>
        <item>Hannah</item>
        <item>Verena</item>
        <item>Vanessa</item>
        <item>Lea</item>
        <item>Nadine</item>
        <item>Carina</item>
        <item>Theresa</item>
        <item>Maria</item>
        <item>Marie</item>
        <item>Emma</item>
        <item>Viktoria</item>
        <item>Tanja</item>
        <item>Lara</item>
        <item>Eva</item>
        <item>Bianca</item>
        <item>Sophia</item>
        <item>Kerstin</item>
        <item>Isabella</item>
        <item>Michaela</item>
        <item>Claudia</item>
        <item>Marlene</item>
        <item>Martina</item>
        <item>Barbara</item>
        <item>Andrea</item>
        <item>Valentina</item>
        <item>Alexandra</item>
        <item>Jennifer</item>
        <item>Selina</item>
        <item>Elena</item>
        <item>Anja</item>
        <item>Tamara</item>
        <item>Katrin</item>
        <item>Michelle</item>
        <item>Victoria</item>
        <item>Jana</item>
        <item>Bettina</item>
        <item>Sabine</item>
        <item>Hanna</item>
        <item>Alina</item>
    </string-array>

</resources>
